--- a/src/app/components/CategoryForm/categoryForm.scss
+++ b/src/app/components/CategoryForm/categoryForm.scss
@@ -1,7 +1,4 @@
 .category {
-    :not(:last-child) {
-        margin: 0 0 10px 0;
-    }
     &__form {
         display: flex;
         flex-direction: column;
@@ -10,6 +7,7 @@
         padding: 5px 7px;
         border-radius: 4px;
         border: 1px solid #ccc;
+        margin: 0 0 5px 0;
     }
     &__button--form.category__button--form {
         display: block;
@@ -29,15 +27,14 @@
         border: none;
         display: flex;
         align-items: center;
-        :not(:last-child) {
-            margin: 0 5px 0 0;
-        }
         svg {
             transition: all 0.35s linear;
             transform: rotate(0deg);
+            margin: 0 5px 0 0;
         }
     }
     &__button.visible {
+        margin: 0 0 15px 0;
         svg {
             transform: rotate(180deg);
         }
